[gd_scene load_steps=14 format=3 uid="uid://cspqhhws2cpiv"]

[ext_resource type="Script" path="res://enemy/projectile/bolt.gd" id="1_yta1c"]
[ext_resource type="Texture2D" uid="uid://uot1sovdj18k" path="res://Art/SpecialAttack/Bolt-Sheet.png" id="2_rtybt"]
[ext_resource type="AudioStream" uid="uid://b037tkda2cbl" path="res://enemy/projectile/projectileSounds/electroAttack.mp3" id="3_n4jyq"]

[sub_resource type="Animation" id="Animation_bvc5u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_0hbjy"]
resource_name = "bolt"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 2), Vector2i(1, 0), Vector2i(1, 2)]
}

[sub_resource type="Animation" id="Animation_2h2fe"]
resource_name = "charge"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_huv77"]
_data = {
"RESET": SubResource("Animation_bvc5u"),
"bolt": SubResource("Animation_0hbjy"),
"charge": SubResource("Animation_2h2fe")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_herqx"]
animation = &"bolt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x0qxa"]
animation = &"charge"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8ils7"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ufsgm"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_o1l62"]
states/bolt/node = SubResource("AnimationNodeAnimation_herqx")
states/bolt/position = Vector2(597, 68)
states/charge/node = SubResource("AnimationNodeAnimation_x0qxa")
states/charge/position = Vector2(421, 80)
transitions = ["Start", "charge", SubResource("AnimationNodeStateMachineTransition_8ils7"), "charge", "bolt", SubResource("AnimationNodeStateMachineTransition_ufsgm")]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2hv8l"]
radius = 5.0
height = 78.0

[node name="bolt" type="Area2D"]
position = Vector2(50, -2)
script = ExtResource("1_yta1c")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-10, 2)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_rtybt")
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationTree")
libraries = {
"": SubResource("AnimationLibrary_huv77")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath(".")
tree_root = SubResource("AnimationNodeStateMachine_o1l62")
anim_player = NodePath("../AnimationPlayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-10, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2hv8l")

[node name="stage_one" type="Timer" parent="."]
wait_time = 1.1
autostart = true

[node name="death_timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="boltSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_n4jyq")
volume_db = 6.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="stage_one" to="." method="_on_stage_one_timeout"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
